--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,3 +1,29 @@
+
+carousel-control-prev {
+    color: black;
+}
+
+
+div ul li {
+  font-family: 'Lora', serif;
+}
+
+div a span {
+  font-family: 'Lora', serif;
+}
+
+div h3 {
+  font-family: 'Lora', serif;
+}
+
+div .yt {
+    border-radius: 20%;
+}
+.bg-dark {
+  background-color: black !important;
+}
+
+
 .nav-link {
   font-family: 'Italiana', serif;
   font-weight: bolder;
