fixed css registro view y duplicado de home

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -173,6 +173,7 @@ background-color:#ea4c89
   background-color:black;
   max-width: 1200px;
   margin: 0px auto;
+  margin-bottom: 10px;
 }
 
 .container{
