cambio color titulos servicio

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -287,3 +287,7 @@ background-color:#ea4c89
     background-color: black !important;
     border-color: whitesmoke !important;
 }
+
+.titulos-servicios {
+    color:white;
+}
