--- a/src/styles/registro.scss
+++ b/src/styles/registro.scss
@@ -6,6 +6,7 @@
   }
   
   .container{
+      padding: 50px !important;
       background-image: url("../img/bg-registro.jpg");
       background-size: contain;
       background-repeat: round;
@@ -19,6 +20,7 @@
   }
   
   .columna-img {
+    padding: 50px !important;
     background-image: url("../img/auto-registro.jpg");
     background-size: cover;
     background-position: center;
