Updated segun lo discutido

--- a/src/styles/video.scss
+++ b/src/styles/video.scss
@@ -5,7 +5,6 @@
 
 #pitem {
     font-size: 40px;
-    background: -webkit-linear-gradient(#eee, #333);
-    -webkit-text-fill-color: transparent;
     font-family: 'Roboto', sans-serif;
+    color: white;
 }
