responsive home and datepicker

--- a/src/styles/checkout.scss
+++ b/src/styles/checkout.scss
@@ -2,3 +2,16 @@
     position: fixed;
     margin-left: 42%;
 }
+
+#checkout:hover{
+    color: none;
+    text-decoration: none;
+    background-color: black;
+    
+  }
+  
+  #checkout{
+    background-color: black;
+    color: white;
+    text-decoration: none;
+  }
