--- a/src/styles/agenda_cards.scss
+++ b/src/styles/agenda_cards.scss
@@ -43,7 +43,7 @@ span {
   color: white;
   text-align: center;
   font-family: "Roboto", sans-serif;
-  font-size: 22px;
+  font-size: 1vw;
 }
 
 .card {
