--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
+
 .nav-link {
   font-family: 'Italiana', serif;
   font-weight: bolder;
+  font-size: 0.8vw;
 }
 .main-servicios{
   background-color:white;
