font almost redy

--- a/src/styles/agenda_cards.scss
+++ b/src/styles/agenda_cards.scss
@@ -42,7 +42,7 @@ span {
 .card-text {
   color: white;
   text-align: center;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1vw;
 }
 
