--- a/src/styles/video.scss
+++ b/src/styles/video.scss
@@ -5,7 +5,7 @@
 
 #pitem {
     font-size: 2vw;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: white;
 }
 
