--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,10 +1,10 @@
 .site-footer
 {
 background-color:black;
-padding:45px 0 20px;
+padding: 30px;
 font-size:15px;
 line-height:24px;
-color:#737373;
+color: white;
 }
 .site-footer hr
 {
@@ -13,16 +13,18 @@ opacity:0.5
 }
 .site-footer hr.small
 {
-margin:20px 0
+padding: 100px;
+margin: 200px;
 }
 .site-footer h6
 {
 color:#fff;
 font-size:16px;
 text-transform:uppercase;
-margin-top:5px;
+margin: 5px;
 letter-spacing:2px;
-font-family: 'Italiana', serif;
+font-family: 'Open sans' sans-serif;
+font-weight: bolder;
 }
 .site-footer a
 {
@@ -37,7 +39,7 @@ text-decoration:none;
 {
 padding-left:0;
 list-style:none;
-font-family: 'Roboto', sans-serif;
+font-family: 'Open sans' sans-serif;
 }
 .footer-links li
 {
@@ -46,7 +48,7 @@ display:block
 .footer-links a
 {
 color:white;
-font-family: 'Roboto', sans-serif;
+font-family: 'Open sans' sans-serif;
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
