--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,15 +5,15 @@ carousel-control-prev {
 
 
 div ul li {
-  font-family: 'Lora', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 div a span {
-  font-family: 'Lora', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 div h3 {
-  font-family: 'Lora', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 div .yt {
@@ -25,8 +25,8 @@ div .yt {
 
 
 .nav-link {
-  font-family: 'Italiana', serif;
-  font-weight: bolder;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 200;
 }
 
 .site-footer
@@ -35,7 +35,7 @@ background-color:black;
 padding:45px 0 20px;
 font-size:15px;
 line-height:24px;
-color:#737373;
+color: white;
 }
 .site-footer hr
 {
@@ -44,7 +44,7 @@ opacity:0.5
 }
 .site-footer hr.small
 {
-margin:20px 0
+margin:20px 0;
 }
 .site-footer h6
 {
@@ -53,7 +53,7 @@ font-size:16px;
 text-transform:uppercase;
 margin-top:5px;
 letter-spacing:2px;
-font-family: 'Italiana', serif;
+font-family: 'Open Sans', sans-serif;
 }
 .site-footer a
 {
@@ -68,7 +68,7 @@ text-decoration:none;
 {
 padding-left:0;
 list-style:none;
-font-family: 'Roboto', sans-serif;
+font-family: 'Open Sans', sans-serif;
 }
 .footer-links li
 {
@@ -77,7 +77,7 @@ display:block
 .footer-links a
 {
 color:white;
-font-family: 'Roboto', sans-serif;
+font-family: 'Open Sans', sans-serif;
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
@@ -139,7 +139,7 @@ margin-bottom:4px
 {
 margin-right:15px;
 text-transform:uppercase;
-color:#96a2b2;
+color: white;
 font-weight:700;
 font-size:13px
 }
@@ -213,14 +213,14 @@ background-color:#ea4c89
   background-size: cover;
 }
 .titulos-interiores {
-  font-family: 'Italiana', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 .parrafo-intro {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin-bottom: 10px;
 }
 .form-group {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color:white;
 }
 
@@ -256,7 +256,7 @@ background-color:#ea4c89
 .contact-number{
   font-size: 1.6rem;
   text-align: center;
-  color: #ad9d91;
+  color: white;
 }
 
 .fa-whatsapp {
@@ -278,7 +278,7 @@ background-color:#ea4c89
 .faq {
   text-decoration: none;
   color: white;
-  font-family: 'Italiana', serif;
+  font-family: 'Open Sans', sans-serif;
   width: 100%;
   text-align: left;
 }
