--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,14 @@
 
 .nav-link {
-  font-family: 'Italiana', serif;
-  font-weight: bolder;
-  font-size: 0.8vw;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: url(https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN_r8OX-hpOqc.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+  margin: auto;
+  width: max-content;
+  padding-top: 10px;
+  color: white;
 }
 .main-servicios{
   background-color:white;
@@ -47,13 +53,22 @@
 .faq {
   text-decoration: none;
   color: white;
-  font-family: 'Italiana', serif;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: url(https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN_r8OX-hpOqc.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
   width: 100%;
   text-align: left;
 }
 
 .faq-card {
   background-color: black;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: url(https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN_r8OX-hpOqc.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 
 .bg-dark {
@@ -69,8 +84,11 @@
     padding-bottom: 15px;
 }
 .btn-primary {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    src: url(https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN_r8OX-hpOqc.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
     padding: 5px 10px;
     background-color: black !important;
     border-color: whitesmoke !important;
