--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -131,7 +131,7 @@ h6 {
 }
 
 .nav-link {
-  font-family: 'Italiana', serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: bolder;
 }
 
@@ -159,7 +159,7 @@ font-size:16px;
 text-transform:uppercase;
 margin-top:5px;
 letter-spacing:2px;
-font-family: 'Italiana', serif;
+font-family: 'Open Sans', sans-serif;
 }
 .site-footer a
 {
@@ -174,7 +174,7 @@ text-decoration:none;
 {
 padding-left:0;
 list-style:none;
-font-family: 'Roboto', sans-serif;
+font-family: 'Open Sans', sans-serif;
 }
 .footer-links li
 {
@@ -183,7 +183,7 @@ display:block
 .footer-links a
 {
 color:white;
-font-family: 'Roboto', sans-serif;
+font-family: 'Open Sans', sans-serif;
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
@@ -325,14 +325,14 @@ background-color:#ea4c89
   background-position: center;
 }
 .titulos-interiores {
-  font-family: 'Italiana', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 .parrafo-intro {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin-bottom: 10px;
 }
 .form-group {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color:white;
 }
 
@@ -390,7 +390,11 @@ background-color:#ea4c89
 .faq {
   text-decoration: none;
   color: white;
-  font-family: 'Italiana', serif;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: url(https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN_r8OX-hpOqc.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
   width: 100%;
   text-align: left;
 }
@@ -412,8 +416,11 @@ background-color:#ea4c89
     padding-bottom: 15px;
 }
 .btn-primary {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    src: url(https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN_r8OX-hpOqc.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
     padding: 5px 10px;
     background-color: black !important;
     border-color: whitesmoke !important;
