--- a/src/styles/registro.scss
+++ b/src/styles/registro.scss
@@ -26,14 +26,14 @@
     background-position: center;
   }
   .titulos-interiores {
-    font-family: 'Italiana', serif;
+    font-family: 'Open Sans', sans-serif;
   }
   .parrafo-intro {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin-bottom: 10px;
   }
   .form-group {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color:white;
   }
   
