--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 
-.nav-link {
+.nav-item li {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
@@ -7,9 +7,9 @@
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
   margin: auto;
   width: max-content;
-  padding-top: 10px;
   color: white;
 }
+
 .main-servicios{
   background-color:white;
   max-width: 1200px;
@@ -31,7 +31,7 @@
 .contact-number{
   font-size: 1.6rem;
   text-align: center;
-  color: #ad9d91;
+  color: white;
 }
 
 .fa-whatsapp {
