--- a/src/styles/checkout.scss
+++ b/src/styles/checkout.scss
@@ -14,3 +14,20 @@
     color: white;
     text-decoration: none;
   }
+
+  .cont-table{
+    background-color: black;
+  }
+
+
+  .btn-gold {
+    background-color:#ad9d91 !important;
+    color: white;
+  }
+
+  .title-chekout {
+    color: white;
+    text-align: center;
+    font-size: 1.6rem;
+    margin-bottom: 30px;
+  }
