fixing css y collapsibles

--- a/src/styles/video.scss
+++ b/src/styles/video.scss
@@ -4,7 +4,9 @@
 
 
 #pitem {
-    font-size: 2vw;
+    width: 100px;
+    margin-top: 200px;
+    font-size: 22px;
     font-family: 'Open Sans', sans-serif;
     color: white;
 }
