Added CSS and payment method

--- a/src/styles/servicios.scss
+++ b/src/styles/servicios.scss
@@ -57,3 +57,14 @@
     color: black;
     font-weight: 700;
   }
+
+  //Editando CSS de imagenes servicio y collapsibles
+
+  .card-img-top:hover{
+    cursor: pointer;
+  }
+
+  .colla:hover {
+    cursor: pointer;
+
+  }
