--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 
-.nav-item li {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: url(https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN_r8OX-hpOqc.woff2) format('woff2');
-  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-  margin: auto;
-  width: max-content;
-  color: white;
+* {
+  font-family: 'Comfortaa', cursive
 }
-
-
-
 
 .contact-number{
   font-size: 1.6rem;
