--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -4,8 +4,8 @@
     border: 0px;
     }
 
-    @media only screen and (max-device-width: 900px) {
+    @media only screen and (max-device-width: 2570px) {
     .mapid {
-
+        width: 99.1vw;
     }
 }
