--- a/src/styles/parallax.scss
+++ b/src/styles/parallax.scss
@@ -13,6 +13,14 @@
     
   }
 
+//4k responsive
+
+  @media only screen and (max-device-width: 2570px) {
+    .parallax{
+        display: none;
+    }
+  }
+
   @media only screen and (max-device-width: 1366px) {
     #upper-paralax {
    display: none;
